--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,7 +20,7 @@ services:
     application:
         build: ./application
         volumes:
-            - ../:/var/www/laravel
+            - /home/aaflalo/dev/cumulus-prov/:/var/www/laravel
 
 ### Databases Data Container ################################
 
