--- a/nginx/laravel.conf
+++ b/nginx/laravel.conf
@@ -1,7 +1,8 @@
 server {
-    listen 80 default_server;
-    listen [::]:80 default_server ipv6only=on;
-
+    listen 80;
+    listen [::]:80 ipv6only=on;
+    
+    server_name cumulus.local;
     root /var/www/laravel/public;
     index index.php index.html index.htm;
 
