--- a/workspace/Dockerfile
+++ b/workspace/Dockerfile
@@ -34,6 +34,7 @@ RUN apt-get update && apt-get install -y \
         php7.0-sqlite3 \
         php7.0-zip \
         php7.0-memcached \
+        php7.0-gettext \
         sqlite3 \
         libsqlite3-dev \
         git \
@@ -42,7 +43,8 @@ RUN apt-get update && apt-get install -y \
         nano \
         nodejs \
         nodejs-dev \
-        npm
+        gettext \
+        npm 
 
 # Clean up, to free some space
 RUN apt-get clean
