--- a/php-fpm/Dockerfile-70
+++ b/php-fpm/Dockerfile-70
@@ -28,6 +28,8 @@ RUN curl -L -o /tmp/memcached.tar.gz "https://github.com/php-memcached-dev/php-m
     && docker-php-ext-install memcached \
     && rm /tmp/memcached.tar.gz
 
+RUN apt-get install gettext -y && docker-php-ext-install -j$(nproc) gettext
+
 RUN usermod -u 1000 www-data
 
 WORKDIR /var/www/laravel
