Add same user in the container as Host

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -149,6 +149,7 @@ services:
         volumes_from:
             - application
         tty: true
+        user: laravel
 
 ### Add more Containers below ###############################
 
