Add missing ARG

--- a/workspace/Dockerfile
+++ b/workspace/Dockerfile
@@ -81,10 +81,13 @@ fi
 # Clean up
 RUN apt-get clean && rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
 
-RUN mkdir -p /var/www/ && useradd -ms /bin/zsh $USER_NAME -u $USER_ID && \
+ARG $USER_NAME=laravel
+ARG $USER_ID=1000
+
+RUN mkdir -p /var/www/$USER_NAME && useradd -ms /bin/zsh $USER_NAME -u $USER_ID && \
 	git clone git://github.com/robbyrussell/oh-my-zsh.git /home/$USER_NAME/.oh-my-zsh && \
 	chown -R $USER_NAME: -R /home/$USER_NAME && \
-        chown -R $USER_NAME: -R /var/www/laravel
+        chown -R $USER_NAME: -R /var/www/$USER_NAME
 
 ADD zshrc /home/laravel/.zshrc
 
