--- a/php-fpm/Dockerfile-70
+++ b/php-fpm/Dockerfile-70
@@ -56,7 +56,7 @@ RUN curl -L -o /tmp/memcached.tar.gz "https://github.com/php-memcached-dev/php-m
     && rm /tmp/memcached.tar.gz \
     && docker-php-ext-enable memcached
 
-RUN apt-get update && apt-get install gettext -y && docker-php-ext-install -j$(nproc) gettext
+RUN apt-get update && apt-get install gettext locales-all -y && docker-php-ext-install -j$(nproc) gettext
 
 RUN apt-get update && apt-get install libicu-dev -y && docker-php-ext-install -j$(nproc) intl
 
