--- a/php-fpm/Dockerfile-70
+++ b/php-fpm/Dockerfile-70
@@ -16,8 +16,11 @@ RUN apt-get update && apt-get install -y \
     libssl-dev \
     libmcrypt-dev \
     libxml2-dev \
-    --no-install-recommends \
-    && rm -r /var/lib/apt/lists/*
+    libicu-dev \
+    gettext \
+    locales-all \
+    git \
+    --no-install-recommends
 
 # install mcrypt library
 RUN docker-php-ext-install mcrypt
@@ -36,16 +39,18 @@ RUN pecl install xdebug && \
     docker-php-ext-enable xdebug
 
 # Install extensions using the helper script provided by the base image
-RUN docker-php-ext-install \
+RUN docker-php-ext-install  -j$(nproc) \
     pdo_mysql \
     pdo_pgsql \
-    gd
+    gd \
+    gettext \
+    intl
 
 # Install Memcached for php 7
-RUN curl -L -o /tmp/memcached.tar.gz "https://github.com/php-memcached-dev/php-memcached/archive/php7.tar.gz" \
-    && mkdir -p memcached \
-    && tar -C memcached -zxvf /tmp/memcached.tar.gz --strip 1 \
-    && ( \
+
+RUN git clone --branch php7 https://github.com/php-memcached-dev/php-memcached /usr/src/php/ext/memcached \
+  && cd /usr/src/php/ext/ \
+  && ( \
         cd memcached \
         && phpize \
         && ./configure \
@@ -53,18 +58,11 @@ RUN curl -L -o /tmp/memcached.tar.gz "https://github.com/php-memcached-dev/php-m
         && make install \
     ) \
     && rm -r memcached \
-    && rm /tmp/memcached.tar.gz \
     && docker-php-ext-enable memcached
-
-RUN apt-get update && apt-get install gettext locales-all -y && docker-php-ext-install -j$(nproc) gettext
-
-RUN apt-get update && apt-get install libicu-dev -y && docker-php-ext-install -j$(nproc) intl
 
 RUN usermod -u $USER_ID www-data
 
-RUN apt-get clean
-
-RUN rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
+RUN apt-get purge git -y && apt-get clean && rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
 
 WORKDIR /var/www/laravel
 
