--- a/workspace/Dockerfile
+++ b/workspace/Dockerfile
@@ -52,7 +52,8 @@ RUN apt-get update && apt-get install -y --force-yes \
         curl \
         vim \
         nodejs \
-        zsh 
+        zsh \
+	dnsutils
 
 # Clean up, to free some space
 RUN apt-get clean
