--- a/nginx/laravel.conf
+++ b/nginx/laravel.conf
@@ -1,6 +1,7 @@
 server {
     listen 80;
     listen [::]:80 ipv6only=on;
+    error_log /var/log/nginx/laravel-error.log;
     
     server_name cumulus.local;
     root /var/www/laravel/public;
