--- a/php-fpm/Dockerfile-71
+++ b/php-fpm/Dockerfile-71
@@ -20,6 +20,7 @@ RUN apt-get update && apt-get install -y \
     gettext \
     locales-all \
     git \
+    libgmp-dev \
     --no-install-recommends
 
 # install mcrypt library
@@ -38,13 +39,18 @@ RUN docker-php-ext-configure gd \
 RUN pecl install xdebug && \
     docker-php-ext-enable xdebug
 
+# Link file for GMP
+
+RUN ln -s /usr/include/x86_64-linux-gnu/gmp.h /usr/include/gmp.h 
+
 # Install extensions using the helper script provided by the base image
 RUN docker-php-ext-install  -j$(nproc) \
     pdo_mysql \
     pdo_pgsql \
     gd \
     gettext \
-    intl
+    intl \
+    gmp 
 
 # Install Memcached for php 7
 
