Make the nginx catch all connections

--- a/nginx/laravel.conf
+++ b/nginx/laravel.conf
@@ -1,9 +1,9 @@
 server {
-    listen 80;
-    listen [::]:80 ipv6only=on;
+    listen 80 default;
+    listen [::]:80 ipv6only=on default;
     error_log /var/log/nginx/laravel-error.log;
     
-    server_name cumulus.local;
+    server_name laravel.local;
     root /var/www/laravel/public;
     index index.php index.html index.htm;
 
