Update caddy config
Add no security of php-fpm to use strace

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,6 +22,8 @@ services:
 ### PHP-FPM Container #######################################
 
     php-fpm:
+        security_opt:
+            - seccomp:unconfined
         build:
             context: ./php-fpm
             dockerfile: Dockerfile-71
