--- a/workspace/Dockerfile
+++ b/workspace/Dockerfile
@@ -4,6 +4,7 @@ MAINTAINER Mahmoud Zalt <mahmoud@zalt.me>
 
 RUN DEBIAN_FRONTEND=noninteractive
 RUN locale-gen en_US.UTF-8
+RUN locale-gen fr_CA.UTF-8
 
 ENV LANGUAGE=en_US.UTF-8
 ENV LC_ALL=en_US.UTF-8
