--- a/php-fpm/laravel.ini
+++ b/php-fpm/laravel.ini
@@ -1,11 +1,10 @@
 date.timezone=UTC
-display_errors=Off
+display_errors=On
 log_errors=On
-extension=mongodb.so
 
 ; Maximum amount of memory a script may consume (128MB)
 ; http://php.net/memory-limit
-memory_limit = 128M
+memory_limit = 256M
 ; Maximum allowed size for uploaded files.
 ; http://php.net/upload-max-filesize
 upload_max_filesize = 20M
