--- a/workspace/Dockerfile
+++ b/workspace/Dockerfile
@@ -39,6 +39,8 @@ RUN apt-get update && apt-get install -y --force-yes \
         php7.1-xdebug \
         php7.1-intl \
 	php7.1-gmp \
+        php7.1-ldap \ 
+        php7.1-redis \ 
 	php-apcu \
         php-dev \
         libcurl4-openssl-dev \
