make LDAP accessible

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -239,6 +239,8 @@ services:
           image: osixia/openldap
           environment:
               LDAP_ADMIN_PASSWORD: abc123
+          ports:
+            - "localhost:389:389"
           expose:
             - "389"
 
