--- a/php-fpm/php.d/xdebug.ini
+++ b/php-fpm/php.d/xdebug.ini
@@ -1,5 +1,8 @@
 xdebug.remote_enable = 1
 xdebug.remote_connect_back = 1
+xdebug.profiler_enable_trigger=1
+xdebug.profiler_output_dir = "/var/www/laravel/"
+xdebug.profiler_enable=0
 xdebug.remote_port = 9000
 xdebug.scream=0 
 xdebug.cli_color=1
