--- a/nginx/laravel.conf
+++ b/nginx/laravel.conf
@@ -3,7 +3,7 @@ server {
     listen [::]:80 ipv6only=on default;
     error_log /var/log/nginx/laravel-error.log;
     
-    server_name laravel.local;
+    server_name laravel.local cumulus.local;
     root /var/www/laravel/public;
     index index.php index.html index.htm;
 
@@ -25,5 +25,36 @@ server {
     }
 }
 
+server {
+    listen 443 ssl http2 default;
+    listen [::]:443 ssl http2 ipv6only=on default;
+    error_log /var/log/nginx/laravel-error.log;
+
+    ssl_certificate     /opt/ssl/server.crt;
+    ssl_certificate_key /opt/ssl/server.key;
+    ssl_protocols       TLSv1 TLSv1.1 TLSv1.2;
+    ssl_ciphers         HIGH:!aNULL:!MD5;
+
+    server_name laravel.local cumulus.local;
+    root /var/www/laravel/public;
+    index index.php index.html index.htm;
+
+    location / {
+         try_files $uri $uri/ /index.php$is_args$args;
+         add_header "Access-Control-Allow-Origin" $http_origin;
+    }
+
+    location ~ \.php$ {
+        try_files $uri /index.php =404;
+        fastcgi_pass php-upstream;
+        fastcgi_index index.php;
+        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+        include fastcgi_params;
+    }
+
+    location ~ /\.ht {
+        deny all;
+    }
+}
 
 
