--- a/nginx/laravel.conf
+++ b/nginx/laravel.conf
@@ -12,8 +12,8 @@ server {
     }
 
     location ~ \.php$ {
-        add_header "Access-Control-Allow-Origin" $http_origin;
-        add_header "Access-Control-Allow-Headers" "Authorization, X-Cumulus-Locale";
+#        add_header "Access-Control-Allow-Origin" $http_origin;
+#        add_header "Access-Control-Allow-Headers" "Authorization, X-Cumulus-Locale";
         try_files $uri /index.php =404;
         fastcgi_pass php-upstream;
         fastcgi_index index.php;
@@ -45,8 +45,8 @@ server {
     }
 
     location ~ \.php$ {
-        add_header "Access-Control-Allow-Origin" $http_origin;
-	add_header "Access-Control-Allow-Headers" "Authorization, X-Cumulus-Locale";
+#        add_header "Access-Control-Allow-Origin" $http_origin;
+#	add_header "Access-Control-Allow-Headers" "Authorization, X-Cumulus-Locale";
         try_files $uri /index.php =404;
         fastcgi_pass php-upstream;
         fastcgi_index index.php;
