--- a/php-fpm/Dockerfile-71
+++ b/php-fpm/Dockerfile-71
@@ -1,8 +1,7 @@
 FROM cytopia/php-fpm-7.1
 ENV DEBIAN_FRONTEND noninteractive
 
-RUN yum install php-memcached php-redis php-ldap -y
-
+RUN yum install php-memcached php-redis php-ldap ca-certificates -y
 WORKDIR /var/www/laravel
 
 EXPOSE 9000
